--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -31,5 +31,6 @@
         </div>
         <app-appointments-loader *ngIf="windowPage == 'appointments-loader'" (closeEvent)="close()"></app-appointments-loader>
         <app-visit-details *ngIf="windowPage == 'visit-details'" (closeEvent)="close()"></app-visit-details>
+        <app-medical-file-details *ngIf="windowPage == 'medical-file-details'" (closeEvent)="close()"></app-medical-file-details>
     </div>
 </div>
