--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,5 +8,8 @@
     <div class="content-section">
         <div class="active-background" *ngIf="isActive"></div>
         <app-content></app-content>
+        <div class="virtual-assistant-container">
+            <app-virtual-assistant-controller></app-virtual-assistant-controller>
+        </div>
     </div>
 </div>
