--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -69,9 +69,8 @@
 }
 
 .virtual-assistant-container {
-    background: red;
-    position: absolute;
-    z-index: 1;
-    bottom: 16px;
-    right: 56px;
+    position: fixed;
+    z-index: 999;
+    bottom: 64px;
+    right: 128px;
 }
