--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visits-manager.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visits-manager.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
     <div class="body">
         <div class="search-header">
-            <app-search-header [advancedSearchOption]="'visit-advanced-search'" (searchEvent)="search($event)"></app-search-header>
+            <app-search-header [searchQuery]="lastSearch" [advancedSearchOption]="'visit-advanced-search'" (searchEvent)="search($event)"></app-search-header>
         </div>
         <div class="visits-list" *ngIf="visits.length > 0">
             <app-visits-list [visits]="visits"></app-visits-list>
