--- a/src/app/components/dashboard/content/medical-files-manager/medical-file-details/medical-file-details.component.html
+++ b/src/app/components/dashboard/content/medical-files-manager/medical-file-details/medical-file-details.component.html
@@ -85,5 +85,13 @@
                 </div>
             </div>
         </div>
+        <div class="row control">
+            <div class="col col-md-6">
+                <button class="primary-button" (click)="edit()">Modifer <i class="fa fa-edit"></i></button>
+            </div>
+            <div class="col col-md-6">
+                <button class="primary-button delete" (click)="delete()">Suprimer <i class="fa fa-trash"></i></button>
+            </div>
+        </div>
     </div>
 </div>
