--- a/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/edit-visit/edit-visit.component.html
+++ b/src/app/components/dashboard/content/visits-and-appointments-manager/visits-manager/visit-details/edit-visit/edit-visit.component.html
@@ -1,1 +1,3 @@
-<p>edit-visit works!</p>
+<div class="main-container">
+    <app-patient-visit [isEdit]="true" [visit]="visit" [noHeader]="true"></app-patient-visit>
+</div>
