--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -28,7 +28,8 @@
     transition-duration: 0.5s;
 }
 
-.pop-up-window {
+.pop-up-window,
+.edit-visit-window {
     background: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
@@ -73,4 +74,33 @@
     z-index: 999;
     bottom: 64px;
     right: 128px;
+}
+
+.edit-visit-container {
+    position: absolute;
+    background: #F5F6FA;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 26px 0px;
+    border-radius: 8px;
+}
+
+.edit-visit-container .edit-visit-header h5 {
+    background: rgb(38, 94, 215);
+    padding: 8px 16px;
+    font-size: 14px;
+    color: white;
+    position: relative;
+    margin: 0px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.edit-visit-container .edit-visit-header h5 i {
+    position: absolute;
+    right: 16px;
+    top: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 2px;
 }
