--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -32,5 +32,6 @@
         <app-appointments-loader *ngIf="windowPage == 'appointments-loader'" (closeEvent)="close()"></app-appointments-loader>
         <app-visit-details *ngIf="windowPage == 'visit-details'" (closeEvent)="close()"></app-visit-details>
         <app-medical-file-details *ngIf="windowPage == 'medical-file-details'" (closeEvent)="close()"></app-medical-file-details>
+        <app-edit-visit *ngIf="windowPage == 'edit-visit'" (closeEvent)="close()"></app-edit-visit>
     </div>
 </div>
