--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -33,5 +33,6 @@
         <app-visit-details *ngIf="windowPage == 'visit-details'" (closeEvent)="close()"></app-visit-details>
         <app-medical-file-details *ngIf="windowPage == 'medical-file-details'" (closeEvent)="close()"></app-medical-file-details>
         <app-edit-visit *ngIf="windowPage == 'edit-visit'" (closeEvent)="close()"></app-edit-visit>
+        <app-next-visit *ngIf="windowPage == 'next-visit'" (closeEvent)="close()"></app-next-visit>
     </div>
 </div>
