--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -34,5 +34,6 @@
         <app-medical-file-details *ngIf="windowPage == 'medical-file-details'" (closeEvent)="close()"></app-medical-file-details>
         <app-edit-visit *ngIf="windowPage == 'edit-visit'" (closeEvent)="close()"></app-edit-visit>
         <app-next-visit *ngIf="windowPage == 'next-visit'" (closeEvent)="close()"></app-next-visit>
+        <app-edit-debt *ngIf="windowPage == 'edit-debt'" (closeEvent)="close()"></app-edit-debt>
     </div>
 </div>
