--- a/src/app/components/dashboard/content/patient-visit/visit-documents/document/document.component.html
+++ b/src/app/components/dashboard/content/patient-visit/visit-documents/document/document.component.html
@@ -1,8 +1,5 @@
-<div class="main-container primary-radius">
-    <div class="control" *ngIf="controllable">
-        <span (click)="edit()">Modifier <i class="fa fa-edit"></i></span>
-        <span (click)="delete()">Suprimer<i class="fa fa-trash"></i></span>
-    </div>
+<div class="main-container primary-radius" (click)="clickEvent.emit()">
+
     <div class="image-container">
         <img src="{{document.path}}">
         <p>
