--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -35,5 +35,6 @@
         <app-edit-visit *ngIf="windowPage == 'edit-visit'" (closeEvent)="close()"></app-edit-visit>
         <app-next-visit *ngIf="windowPage == 'next-visit'" (closeEvent)="close()"></app-next-visit>
         <app-edit-debt *ngIf="windowPage == 'edit-debt'" (closeEvent)="close()"></app-edit-debt>
+        <app-document-details *ngIf="windowPage == 'document-details'" (closeEvent)="close()"></app-document-details>
     </div>
 </div>
