--- a/src/app/components/dashboard/content/prescription-manager/prescription-models/prescription-models.component.html
+++ b/src/app/components/dashboard/content/prescription-manager/prescription-models/prescription-models.component.html
@@ -1,1 +1,14 @@
-<p>prescription-models works!</p>
+<div class="main-container">
+    <div class="header stretch-container">
+        <h5>Les Models des ordonnances</h5>
+        <button class="primary-button" (click)="openSubmitter()">Ajouter <i class="fa fa-plus"></i></button>
+    </div>
+    <div class="search-header">
+        <input type="text" placeholder="Recherché un Traitment" [(ngModel)]="name" class="primary-input">
+    </div>
+    <div class="body">
+        <div class="prescription-model" *ngFor="let prescriptionModel of prescriptionModels">
+            <app-prescription-model (deleteEvent)="delete($event )" (editEvent)="edit($event)" (useEvent)="use($event)" [prescriptionModel]="prescriptionModel"></app-prescription-model>
+        </div>
+    </div>
+</div>
