--- a/src/app/components/dashboard/content/prescription-manager/check-ups-models/check-ups-models.component.html
+++ b/src/app/components/dashboard/content/prescription-manager/check-ups-models/check-ups-models.component.html
@@ -1,1 +1,12 @@
-<p>check-ups-models works!</p>
+<div class="main-container">
+    <div class="header stretch-container">
+        <h5>Les Type de bilans</h5>
+        <button class="primary-button">Ajouter un type de bilan <i class="fa fa-plus"></i></button>
+    </div>
+
+    <div class="check-up-types">
+        <div class="check-up-type" *ngFor="let checkUpType of checkUpTypes">
+            <app-check-up-type [selectedCheckUps]="checkUps" [checkUpType]="checkUpType"></app-check-up-type>
+        </div>
+    </div>
+</div>
