--- a/src/app/components/dashboard/content/prescription-manager/check-ups-models/check-ups-models.component.html
+++ b/src/app/components/dashboard/content/prescription-manager/check-ups-models/check-ups-models.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
     <div class="header stretch-container">
         <h5>Les Type de bilans</h5>
-        <button class="primary-button">Ajouter un type de bilan <i class="fa fa-plus"></i></button>
+        <button class="primary-button" (click)="openSubmitter()">Ajouter un type de bilan <i class="fa fa-plus"></i></button>
     </div>
 
     <div class="check-up-types">
