--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -36,5 +36,6 @@
         <app-next-visit *ngIf="windowPage == 'next-visit'" (closeEvent)="close()"></app-next-visit>
         <app-edit-debt *ngIf="windowPage == 'edit-debt'" (closeEvent)="close()"></app-edit-debt>
         <app-document-details *ngIf="windowPage == 'document-details'" (closeEvent)="close()"></app-document-details>
+        <app-check-up-type-submitter *ngIf="windowPage == 'check-up-type-submitter'" (closeEvent)="close()"></app-check-up-type-submitter>
     </div>
 </div>
