--- a/src/app/components/dashboard/content/prescription-manager/check-ups-models/check-up-type-submitter/check-up-type-submitter.component.html
+++ b/src/app/components/dashboard/content/prescription-manager/check-ups-models/check-up-type-submitter/check-up-type-submitter.component.html
@@ -3,7 +3,7 @@
         <form name="form" [formGroup]="form">
             <div class="form-group">
 
-                <input type="text" class="primary-input" placeholder="Le type de bilan" formControlName="name" [ngClass]="{'is-invalid' : form.get('name').touched && form.get('name').invalid}">
+                <input type="text" [(ngModel)]="checkUpType.name" class="primary-input" placeholder="Le type de bilan" formControlName="name" [ngClass]="{'is-invalid' : form.get('name').touched && form.get('name').invalid}">
                 <div class="invalid-feedback" *ngIf="form.get('name').touched && form.get('name').invalid">
                     <div *ngIf="form.get('name').errors.required">le nom est requis</div>
                     <div *ngIf="form.get('name').errors.minlength">au moins 3 caractères</div>
@@ -11,7 +11,9 @@
             </div>
 
             <div class="controller">
-                <button class="primary-button" (click)="add()" [disabled]="!form.valid">Ajouter <i class="fa fa-plus"></i></button>
+                <button class="primary-button" (click)="add()" *ngIf="!checkUpType.id" [disabled]="!form.valid">Ajouter <i class="fa fa-plus"></i></button>
+                <button class="primary-button" (click)="edit()" *ngIf="checkUpType.id" [disabled]="!form.valid">Modifer <i class="fa fa-edit"></i></button>
+
                 <div style="clear : both"></div>
             </div>
         </form>
